2005-02-24  Waldo Bastian <bastian@kde.org>

	* menu-spec.xml: Fixed links to www.freedesktop.org

2004-12-13  Mark McLoughlin  <mark@skynet.ie>

	* menu-spec.xml: elaboration from Waldo.

2004-12-08  Mark McLoughlin  <mark@skynet.ie>

	* menu-spec.xml: make <OnlyUnallocated/> be for entries
	which don't match any <Include> rule rather than entries
	which don't appear in any menu.

2004-09-03  Mark McLoughlin  <mark@skynet.ie>

	* menu-spec.xml: minor typo - "This specification adds two
	new fields to desktop entries" - s/two/three/

2004-05-07  Mark McLoughlin  <mark@skynet.ie>

	* menu-spec.xml: fix typo in <Menuname> description. Its
	inline_header rather than inline_title according to the DTD.

2004-04-18  Mark McLoughlin  <mark@skynet.ie>

	Patch from Ville Skyttä <ville.skytta@iki.fi>

	* menu-spec.xml: editorial changes and typo fixes.

2003-12-12  Waldo Bastian  <bastian@kde.org>
        * menu-spec.xml: Correct example in "Legacy Menu Hierarchies"

2003-11-09  Heinrich Wendel  <h_wendel@cojobo.net>
    * menu-spec.xml: patch for categories based on Suse 9.0
	* menu-spec.xml: Grahpics -> Graphics
	* menu-spec.xml: DTD fix
	* menu.dtd: added dtd
	* testsuite: fixed errors highlighted by havoc

2003-10-23  Havoc Pennington  <hp@redhat.com>

	* menu-spec.xml: clarify how <Move> elements are resolved

2003-10-21  Havoc Pennington  <hp@redhat.com>

	* create autotools setup
